test/org/midica/testfiles/failing/eff-func-pbr-halftone-gt-max-2.midica
INCLUDE inc/instruments.midica


0: pitch_range.double.set(127.997)
